fix(userland/example): fix receiver test

--- a/userland/example/components/tea/pots/manifest.toa.yaml
+++ b/userland/example/components/tea/pots/manifest.toa.yaml
@@ -4,10 +4,9 @@ namespace: tea
 entity:
   storage: mongodb
   schema:
-    material: [glass, ceramic, steel]
+    material*: [glass, ceramic, steel]
     volume: number
     booked: false
-  initialized: true
 
 operations:
   transit:
