refactor(sampling): change message sample type

--- a/userland/samples/src/.replay/translate/.schemas/operation.cos.yaml
+++ b/userland/samples/src/.replay/translate/.schemas/operation.cos.yaml
@@ -7,7 +7,7 @@ output: ~
 local: &calls
   ~+:
     input: ~
-    query:
+    query: &query
       id: string
       criteria: string
       omit: number
