refactor(concise): rename `cos` to `concise`

--- a/integration/dummies/messages/manifest.toa.yaml
+++ b/integration/dummies/messages/manifest.toa.yaml
@@ -4,7 +4,7 @@ name: messages
 entity:
   schema:
     properties:
-      sender: id
+      sender: toa:id
       text: string
       timestamp: integer
       deleted: boolean
