refactor(core): remove system properties from default projection
`id` is still being returned from storage

--- a/integration/dummies/messages/manifest.toa.yaml
+++ b/integration/dummies/messages/manifest.toa.yaml
@@ -4,7 +4,7 @@ name: messages
 entity:
   schema:
     properties:
-      sender: toa:id
+      sender: .id
       text: string
       timestamp: integer
       deleted: boolean
