fix(userland): add output to local call sample

--- a/userland/example/components/tea/pots/samples/transit.yaml
+++ b/userland/example/components/tea/pots/samples/transit.yaml
@@ -20,6 +20,9 @@ title: Should emit `created` event
 input:
   material: glass
   volume: 1.5
+next:
+  material: glass
+  volume: 1.5
 events:
   created:
     material: glass
