--- a/package.json
+++ b/package.json
@@ -34,19 +34,19 @@
     "@babel/eslint-parser": "7.17.0",
     "@commitlint/cli": "14.1.0",
     "@commitlint/config-conventional": "14.1.0",
-    "@cucumber/cucumber": "8.5.2",
+    "@cucumber/cucumber": "8.10.0",
     "@types/jest": "28.1.1",
     "@types/node": "18.0.0",
     "amqplib": "0.10.0",
     "clone-deep": "4.0.1",
     "execa": "5.1.1",
-    "husky": "7.0.4",
-    "jest": "27.3.1",
-    "knex": "2.4.0",
+    "husky": "8.0.3",
+    "jest": "29.4.1",
+    "knex": "2.4.2",
     "node-fetch": "2.6.7",
-    "randomstring": "1.2.1",
+    "randomstring": "1.2.3",
     "snazzy": "9.0.0",
-    "standard": "16.0.4"
+    "standard": "17.0.0"
   },
   "scripts": {
     "prepare": "npx husky install",
@@ -68,9 +68,9 @@
   },
   "standard": {
     "parser": "@babel/eslint-parser",
-    "env": {
-      "jest": true
-    },
+    "env": [
+      "jest"
+    ],
     "globals": [
       "AbortController"
     ]
