feat(features): add `toa replay` in a context directory

--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "test:integration": "npx jest --roots integration --runInBand --testTimeout 30000",
     "test:features": "npx cucumber-js",
     "test:features:unit": "npx cucumber-js -p schema && npx cucumber-js -p norm",
-    "test:all": "npm run test && npm run test:integration && npm run test:features",
+    "test:samples": "toa replay userland/example",
+    "test:all": "npm run test && npm run test:integration && npm run test:features && test:samples",
     "integration:deploy": "npm run publish:local && npx toa deploy ./integration/context",
     "lint": "npx standard --verbose --fix | npx snazzy",
     "npm:login:local": "npm adduser --registry http://localhost:4873",
