--- a/userland/samples/src/.replay/.suite/translate/schemas/operation.cos.yaml
+++ b/userland/samples/src/.replay/.suite/translate/schemas/operation.cos.yaml
@@ -1,5 +1,3 @@
-$id: operation
-
 autonomous: boolean
 title: string
 input: ~
@@ -7,7 +5,7 @@ output: ~
 local: &calls
   ~+:
     input: ~
-    query: &query
+    query:
       id: string
       criteria: string
       omit: number
