--- a/libraries/messenger/docker-compose.yaml
+++ b/libraries/messenger/docker-compose.yaml
@@ -2,9 +2,10 @@ version: "3.9"
 services:
   rabbitmq:
     image: rabbitmq:3.10.0-management
+    container_name: rmq
     ports:
-      - '5672:5672'
-      - '15672:15672'
+      - '5673:5672'
+      - '15673:15672'
     environment:
       RABBITMQ_DEFAULT_USER: developer
       RABBITMQ_DEFAULT_PASS: secret
