--- a/libraries/comq/docker-compose.yaml
+++ b/libraries/comq/docker-compose.yaml
@@ -9,3 +9,7 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: developer
       RABBITMQ_DEFAULT_PASS: secret
+    deploy:
+      resources:
+        limits:
+          memory: 512MB
