--- a/libraries/schema/package.json
+++ b/libraries/schema/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/schema",
-  "version": "0.2.0-dev.107",
+  "version": "0.2.0-dev.108",
   "description": "Toa Schema",
   "homepage": "https://toa.io",
   "author": {
@@ -23,10 +23,10 @@
   },
   "main": "source/index.js",
   "dependencies": {
-    "ajv": "8.6.3",
-    "ajv-formats": "2.1.1",
     "@toa.io/generic": "*",
     "@toa.io/schemas": "*",
-    "@toa.io/yaml": "*"
+    "@toa.io/yaml": "*",
+    "ajv": "8.6.3",
+    "ajv-formats": "2.1.1"
   }
 }
