--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "test:all": "npm run test && npm run test:integration && npm run test:features && test:samples",
     "integration:deploy": "npm run publish:local && npx toa deploy ./integration/context",
     "lint": "npx standard --verbose --fix | npx snazzy",
-    "npm:login:local": "npm adduser --registry http://localhost:4873",
+    "npm:login:local": "npm adduser --registry http://localhost:4873 --auth-type=legacy",
     "version:dev": "npx --yes lerna version --conventional-prerelease --preid dev --force-publish --no-git-tag-version --no-push --no-changelog --yes",
     "publish:local": "npm publish --workspaces",
     "cluster": "chmod +x ./integration/scripts/cluster.sh && ./integration/scripts/cluster.sh",
