--- a/libraries/comq/package.json
+++ b/libraries/comq/package.json
@@ -1,6 +1,6 @@
 {
   "name": "comq",
-  "version": "0.2.0-dev.108",
+  "version": "0.2.1",
   "description": "ComQ",
   "homepage": "https://toa.io",
   "author": {
