--- a/libraries/console/package.json
+++ b/libraries/console/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/console",
-  "version": "0.2.0-dev.108",
+  "version": "0.2.1",
   "description": "Toa Console",
   "homepage": "https://toa.io",
   "author": {
