--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,7 +45,12 @@ jobs:
           git config user.email "${{ github.actor}}@users.noreply.github.com"
           
           if [ ${{ github.base_ref }} = main ]; then
-            npx lerna publish --no-verify-access --conventional-graduate --yes
+            VERSION=$(npm pkg get version | sed 's/"//g')
+            npm run npm dist-tag add 
           else
-            npx lerna publish --no-verify-access --conventional-prerelease --preid dev --dist-tag dev --no-changelog --yes
+            npm version minor
+            npm version minor -ws
+            git commit -am "chore: bump version"
+            git push
+            npm publish --tag dev
           fi
