--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,4 +1,4 @@
-name: Publish
+name: Publish packages
 
 on:
   pull_request:
@@ -45,12 +45,9 @@ jobs:
           git config user.email "${{ github.actor}}@users.noreply.github.com"
           
           if [ ${{ github.base_ref }} = main ]; then
-            VERSION=$(npm pkg get version | sed 's/"//g')
-            npm run npm dist-tag add 
+            npm version minor --workspaces --include-workspace-root --no-commit-hooks --no-workspaces-update -m "chore: bump version"
+            npm publish --workspaces
           else
-            npm version minor
-            npm version minor -ws
-            git commit -am "chore: bump version" --no-verify
-            git push --no-verify
-            npm publish --tag dev
+            npm version prerelease --workspaces --include-workspace-root --no-commit-hooks --no-workspaces-update -m "chore: bump version" --preid dev
+            npm publish --workspaces --tag dev
           fi
