--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/toa",
-  "version": "0.2.1",
+  "version": "0.2.2-dev.0",
   "private": true,
   "description": "Microservice operations distributed runtime",
   "homepage": "https://toa.io",
