chore: sync versions

--- a/libraries/kubernetes/package.json
+++ b/libraries/kubernetes/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/kubernetes",
-  "version": "0.2.1",
+  "version": "0.2.2-dev.3",
   "description": "Toa kubectl/kubectx wrapper",
   "homepage": "https://toa.io",
   "author": {
