--- a/libraries/conveyor/package.json
+++ b/libraries/conveyor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/conveyor",
-  "version": "0.2.1",
+  "version": "0.2.2-dev.3",
   "description": "Toa Conveyor",
   "homepage": "https://toa.io",
   "author": {
