--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -47,13 +47,13 @@ jobs:
           if [ ${{ github.base_ref }} = main ]; then
             npm version minor --workspaces --include-workspace-root --no-commit-hooks --no-workspaces-update -m "chore: bump version" --no-git-tag-vesion
             npm publish --workspaces
-            git commit -am "chore: bump version"
+            git commit -am "chore: bump version" --no-verify
             git checkout dev
             git merge main
-            git push
+            git push --no-verify
           else
             npm version prerelease --workspaces --include-workspace-root --no-commit-hooks --no-workspaces-update --preid dev --no-git-tag-version
-            git commit -am "chore: bump version"
-            git push
+            git commit -am "chore: bump version" --no-verify
+            git push --no-verify
             npm publish --workspaces --tag dev
           fi
