--- a/extensions/configuration/package.json
+++ b/extensions/configuration/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/extensions.configuration",
-  "version": "0.2.2-dev.5",
+  "version": "0.3.0",
   "description": "Toa Configuration",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
