--- a/libraries/mock/package.json
+++ b/libraries/mock/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/mock",
-  "version": "0.2.2-dev.5",
+  "version": "0.3.0",
   "description": "Toa Mocks",
   "homepage": "https://toa.io",
   "author": {
