--- a/runtime/prototype/package.json
+++ b/runtime/prototype/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/prototype",
-  "version": "0.2.2-dev.5",
+  "version": "0.3.0",
   "description": "Toa Generic Prototype",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
