--- a/runtime/runtime/package.json
+++ b/runtime/runtime/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/runtime",
-  "version": "0.3.0",
+  "version": "0.3.1-dev.0",
   "description": "Toa Runtime",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
