--- a/connectors/bridges.node/package.json
+++ b/connectors/bridges.node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/bridges.node",
-  "version": "0.3.1-dev.2",
+  "version": "0.2.0",
   "description": "Toa Node Bridge (inproc)",
   "homepage": "https://toa.io",
   "author": {
