--- a/extensions/origins/package.json
+++ b/extensions/origins/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/extensions.origins",
-  "version": "0.3.1-dev.2",
+  "version": "0.2.0",
   "description": "Toa operations context HTTP client",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
