--- a/extensions/sampling/package.json
+++ b/extensions/sampling/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/extensions.sampling",
-  "version": "0.3.1-dev.2",
+  "version": "0.2.0",
   "description": "Toa operations sampling",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
