--- a/libraries/console/package.json
+++ b/libraries/console/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/console",
-  "version": "0.3.1-dev.2",
+  "version": "0.2.0",
   "description": "Toa Console",
   "homepage": "https://toa.io",
   "author": {
