--- a/libraries/kubernetes/package.json
+++ b/libraries/kubernetes/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/kubernetes",
-  "version": "0.3.1-dev.2",
+  "version": "0.2.0",
   "description": "Toa kubectl/kubectx wrapper",
   "homepage": "https://toa.io",
   "author": {
