--- a/libraries/schemas/package.json
+++ b/libraries/schemas/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/schemas",
-  "version": "0.3.1-dev.2",
+  "version": "0.2.0",
   "description": "Toa Schemas",
   "homepage": "https://toa.io",
   "author": {
