--- a/operations/package.json
+++ b/operations/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/operations",
-  "version": "0.3.1-dev.2",
+  "version": "0.2.0",
   "description": "Toa Deployment",
   "homepage": "https://toa.io",
   "author": {
