--- a/userland/package.json
+++ b/userland/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/userland",
-  "version": "0.3.1-dev.2",
+  "version": "0.2.0",
   "description": "Toa development kit",
   "homepage": "https://toa.io",
   "author": {
