--- a/libraries/mock/package.json
+++ b/libraries/mock/package.json
@@ -22,6 +22,7 @@
     "access": "public"
   },
   "main": "source/index.js",
+  "types": "types/index.d.ts",
   "dependencies": {
     "@toa.io/generic": "*"
   }
