--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Checkout
         uses: actions/checkout@v3
@@ -29,6 +30,7 @@ jobs:
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor}}@users.noreply.github.com"
+          echo $NODE_AUTH_TOKEN
           npm whoami
           
           if [ ${{ github.base_ref }} = main ]; then
