--- a/libraries/concise/package.json
+++ b/libraries/concise/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/concise",
-  "version": "0.2.0",
+  "version": "0.2.1-dev.0",
   "description": "Toa Concise Object Schema",
   "homepage": "https://toa.io",
   "author": {
