--- a/connectors/bindings.amqp/package.json
+++ b/connectors/bindings.amqp/package.json
@@ -4,7 +4,7 @@
   "description": "Toa AMQP Binding",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
-  "main": "src/index.js",
+  "main": "source/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/toa-io/toa.git"
@@ -27,7 +27,7 @@
     "@toa.io/core": "*",
     "@toa.io/generic": "*",
     "@toa.io/pointer": "*",
-    "amqplib": "0.10.0"
+    "comq": "*"
   },
   "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
 }
