--- a/libraries/comq/package.json
+++ b/libraries/comq/package.json
@@ -22,6 +22,7 @@
     "access": "public"
   },
   "main": "source/index.js",
+  "types": "types/index.d.ts",
   "devDependencies": {
     "@toa.io/command": "*",
     "@toa.io/mock": "*",
