--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "test": "npm run test:lint && npm run test:unit && npm run test:features:unit",
     "test:lint": "npx standard --verbose | npx snazzy",
     "test:unit": "npx jest --roots runtime connectors extensions operations libraries features userland",
-    "test:integration": "npx jest --roots integration --runInBand --testTimeout 30000",
-    "test:features": "npx cucumber-js && npx cucumber-js -p comq",
+    "test:integration": "npx jest --roots integration --runInBand --testTimeout 180000",
+    "test:features": "npx cucumber-js",
     "test:features:unit": "npx cucumber-js -p schema && npx cucumber-js -p norm",
     "test:samples": "toa replay userland/example",
     "test:all": "npm run test && npm run test:integration && npm run test:features && test:samples",
