--- a/runtime/cli/package.json
+++ b/runtime/cli/package.json
@@ -18,12 +18,14 @@
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
+  "peerDependencies": {
+    "@toa.io/runtime": "*"
+  },
   "dependencies": {
     "@toa.io/console": "*",
     "@toa.io/generic": "*",
     "@toa.io/kubernetes": "*",
     "@toa.io/norm": "*",
-    "@toa.io/runtime": "*",
     "@toa.io/yaml": "*",
     "find-up": "5.0.0",
     "yargs": "17.6.2"
