--- a/libraries/schemas/package.json
+++ b/libraries/schemas/package.json
@@ -23,10 +23,10 @@
   },
   "main": "source/index.js",
   "dependencies": {
-    "@toa.io/concise": "*",
-    "@toa.io/filesystem": "*",
-    "@toa.io/generic": "*",
-    "@toa.io/yaml": "*",
+    "@toa.io/concise": "0.3.0",
+    "@toa.io/filesystem": "0.3.0",
+    "@toa.io/generic": "0.3.0",
+    "@toa.io/yaml": "0.3.0",
     "ajv": "8.6.3",
     "ajv-formats": "2.1.1"
   }
