--- a/runtime/runtime/package.json
+++ b/runtime/runtime/package.json
@@ -22,24 +22,24 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/bindings.amqp": "*",
-    "@toa.io/bindings.http": "*",
-    "@toa.io/bindings.loop": "*",
-    "@toa.io/boot": "*",
-    "@toa.io/bridges.node": "*",
-    "@toa.io/cli": "*",
-    "@toa.io/core": "*",
-    "@toa.io/extensions.configuration": "*",
-    "@toa.io/extensions.exposition": "*",
-    "@toa.io/extensions.origins": "*",
-    "@toa.io/extensions.sampling": "*",
-    "@toa.io/norm": "*",
-    "@toa.io/operations": "*",
-    "@toa.io/prototype": "*",
-    "@toa.io/storages.mongodb": "*",
-    "@toa.io/storages.null": "*",
-    "@toa.io/storages.sql": "*",
-    "@toa.io/userland": "*"
+    "@toa.io/bindings.amqp": "0.3.0",
+    "@toa.io/bindings.http": "0.3.0",
+    "@toa.io/bindings.loop": "0.3.0",
+    "@toa.io/boot": "0.3.0",
+    "@toa.io/bridges.node": "0.3.0",
+    "@toa.io/cli": "0.3.0",
+    "@toa.io/core": "0.3.0",
+    "@toa.io/extensions.configuration": "0.3.0",
+    "@toa.io/extensions.exposition": "0.3.0",
+    "@toa.io/extensions.origins": "0.3.0",
+    "@toa.io/extensions.sampling": "0.3.0",
+    "@toa.io/norm": "0.3.0",
+    "@toa.io/operations": "0.3.0",
+    "@toa.io/prototype": "0.3.0",
+    "@toa.io/storages.mongodb": "0.3.0",
+    "@toa.io/storages.null": "0.3.0",
+    "@toa.io/storages.sql": "0.3.0",
+    "@toa.io/userland": "0.3.0"
   },
   "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
 }
