--- a/connectors/bindings.amqp/package.json
+++ b/connectors/bindings.amqp/package.json
@@ -19,15 +19,15 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "devDependencies": {
-    "@toa.io/mock": "*",
+    "@toa.io/mock": "0.3.0",
     "@types/amqplib": "0.8.2"
   },
   "dependencies": {
-    "@toa.io/console": "*",
-    "@toa.io/core": "*",
-    "@toa.io/generic": "*",
-    "@toa.io/pointer": "*",
-    "comq": "*"
+    "@toa.io/console": "0.3.0",
+    "@toa.io/core": "0.3.0",
+    "@toa.io/generic": "0.3.0",
+    "@toa.io/pointer": "0.3.0",
+    "comq": "0.3.0"
   },
   "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
 }
