--- a/connectors/bindings.loop/package.json
+++ b/connectors/bindings.loop/package.json
@@ -19,7 +19,7 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/generic": "*"
+    "@toa.io/generic": "0.3.0"
   },
   "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
 }
