--- a/connectors/storages.mongodb/package.json
+++ b/connectors/storages.mongodb/package.json
@@ -19,10 +19,10 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/console": "*",
-    "@toa.io/core": "*",
-    "@toa.io/generic": "*",
-    "@toa.io/pointer": "*",
+    "@toa.io/console": "0.3.0",
+    "@toa.io/core": "0.3.0",
+    "@toa.io/generic": "0.3.0",
+    "@toa.io/pointer": "0.3.0",
     "mongodb": "4.13.0"
   },
   "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
