--- a/connectors/storages.sql/package.json
+++ b/connectors/storages.sql/package.json
@@ -19,13 +19,13 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "devDependencies": {
-    "@toa.io/mock": "*"
+    "@toa.io/mock": "0.3.0"
   },
   "dependencies": {
-    "@toa.io/console": "*",
-    "@toa.io/conveyor": "*",
-    "@toa.io/generic": "*",
-    "@toa.io/pointer": "*",
+    "@toa.io/console": "0.3.0",
+    "@toa.io/conveyor": "0.3.0",
+    "@toa.io/generic": "0.3.0",
+    "@toa.io/pointer": "0.3.0",
     "knex": "2.4.2",
     "pg": "8.9.0"
   }
