--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -22,12 +22,12 @@
     "@types/express": "4.17.13"
   },
   "dependencies": {
-    "@toa.io/bindings.amqp": "*",
-    "@toa.io/console": "*",
-    "@toa.io/core": "*",
-    "@toa.io/generic": "*",
-    "@toa.io/schema": "*",
-    "@toa.io/yaml": "*",
+    "@toa.io/bindings.amqp": "0.3.0",
+    "@toa.io/console": "0.3.0",
+    "@toa.io/core": "0.3.0",
+    "@toa.io/generic": "0.3.0",
+    "@toa.io/schema": "0.3.0",
+    "@toa.io/yaml": "0.3.0",
     "cors": "2.8.5",
     "express": "4.18.1",
     "path-to-regexp": "6.2.0"
