--- a/extensions/sampling/package.json
+++ b/extensions/sampling/package.json
@@ -19,8 +19,8 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/core": "*",
-    "@toa.io/generic": "*",
-    "@toa.io/schemas": "*"
+    "@toa.io/core": "0.3.0",
+    "@toa.io/generic": "0.3.0",
+    "@toa.io/schemas": "0.3.0"
   }
 }
