--- a/libraries/pointer/package.json
+++ b/libraries/pointer/package.json
@@ -23,9 +23,9 @@
   },
   "main": "source/index.js",
   "dependencies": {
-    "@toa.io/console": "*",
-    "@toa.io/generic": "*",
-    "@toa.io/schema": "*",
-    "@toa.io/yaml": "*"
+    "@toa.io/console": "0.3.0",
+    "@toa.io/generic": "0.3.0",
+    "@toa.io/schema": "0.3.0",
+    "@toa.io/yaml": "0.3.0"
   }
 }
