--- a/operations/package.json
+++ b/operations/package.json
@@ -26,9 +26,9 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/filesystem": "*",
-    "@toa.io/generic": "*",
-    "@toa.io/yaml": "*",
+    "@toa.io/filesystem": "0.3.0",
+    "@toa.io/generic": "0.3.0",
+    "@toa.io/yaml": "0.3.0",
     "execa": "5.1.1"
   },
   "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
