--- a/runtime/boot/package.json
+++ b/runtime/boot/package.json
@@ -20,11 +20,11 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/core": "*",
-    "@toa.io/filesystem": "*",
-    "@toa.io/generic": "*",
-    "@toa.io/norm": "*",
-    "@toa.io/schema": "*",
+    "@toa.io/core": "0.3.0",
+    "@toa.io/filesystem": "0.3.0",
+    "@toa.io/generic": "0.3.0",
+    "@toa.io/norm": "0.3.0",
+    "@toa.io/schema": "0.3.0",
     "clone-deep": "4.0.1"
   },
   "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
