--- a/runtime/core/package.json
+++ b/runtime/core/package.json
@@ -20,9 +20,9 @@
   },
   "dependencies": {
     "@rsql/parser": "1.2.4",
-    "@toa.io/console": "*",
-    "@toa.io/generic": "*",
-    "@toa.io/yaml": "*",
+    "@toa.io/console": "0.3.0",
+    "@toa.io/generic": "0.3.0",
+    "@toa.io/yaml": "0.3.0",
     "clone-deep": "4.0.1"
   },
   "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
