--- a/runtime/core/package.json
+++ b/runtime/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/core",
-  "version": "0.3.1-alpha.0",
+  "version": "0.3.0",
   "description": "Toa Core",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -20,9 +20,9 @@
   },
   "dependencies": {
     "@rsql/parser": "1.2.4",
-    "@toa.io/console": "0.3.1-alpha.0",
-    "@toa.io/generic": "0.3.1-alpha.0",
-    "@toa.io/yaml": "0.3.1-alpha.0",
+    "@toa.io/console": "0.3.0",
+    "@toa.io/generic": "0.3.0",
+    "@toa.io/yaml": "0.3.0",
     "clone-deep": "4.0.1"
   },
   "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
