--- a/connectors/bridges.node/package.json
+++ b/connectors/bridges.node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/bridges.node",
-  "version": "0.3.1-alpha.0",
+  "version": "0.3.0",
   "description": "Toa Node Bridge (inproc)",
   "homepage": "https://toa.io",
   "author": {
@@ -26,9 +26,9 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/core": "0.3.1-alpha.0",
-    "@toa.io/filesystem": "0.3.1-alpha.0",
-    "@toa.io/generic": "0.3.1-alpha.0",
+    "@toa.io/core": "0.3.0",
+    "@toa.io/filesystem": "0.3.0",
+    "@toa.io/generic": "0.3.0",
     "fast-glob": "3.2.7"
   },
   "devDependencies": {
