--- a/connectors/storages.sql/package.json
+++ b/connectors/storages.sql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/storages.sql",
-  "version": "0.3.1-alpha.0",
+  "version": "0.3.0",
   "description": "Toa SQL Storage Connector",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -19,13 +19,13 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "devDependencies": {
-    "@toa.io/mock": "0.3.1-alpha.0"
+    "@toa.io/mock": "0.3.0"
   },
   "dependencies": {
-    "@toa.io/console": "0.3.1-alpha.0",
-    "@toa.io/conveyor": "0.3.1-alpha.0",
-    "@toa.io/generic": "0.3.1-alpha.0",
-    "@toa.io/pointer": "0.3.1-alpha.0",
+    "@toa.io/console": "0.3.0",
+    "@toa.io/conveyor": "0.3.0",
+    "@toa.io/generic": "0.3.0",
+    "@toa.io/pointer": "0.3.0",
     "knex": "2.4.2",
     "pg": "8.9.0"
   }
