--- a/libraries/concise/package.json
+++ b/libraries/concise/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/concise",
-  "version": "0.3.1-alpha.0",
+  "version": "0.3.0",
   "description": "Toa Concise Object Schema",
   "homepage": "https://toa.io",
   "author": {
@@ -23,10 +23,10 @@
   },
   "main": "source/index.js",
   "devDependencies": {
-    "@toa.io/mock": "0.3.1-alpha.0"
+    "@toa.io/mock": "0.3.0"
   },
   "dependencies": {
-    "@toa.io/generic": "0.3.1-alpha.0",
-    "@toa.io/yaml": "0.3.1-alpha.0"
+    "@toa.io/generic": "0.3.0",
+    "@toa.io/yaml": "0.3.0"
   }
 }
