chore(release): v0.4.0-dev.0

--- a/extensions/configuration/package.json
+++ b/extensions/configuration/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/extensions.configuration",
-  "version": "0.3.0",
+  "version": "0.4.0-dev.0",
   "description": "Toa Configuration",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -16,10 +16,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@toa.io/core": "0.3.0",
-    "@toa.io/generic": "0.3.0",
-    "@toa.io/schema": "0.3.0",
-    "@toa.io/yaml": "0.3.0",
+    "@toa.io/core": "0.4.0-dev.0",
+    "@toa.io/generic": "0.4.0-dev.0",
+    "@toa.io/schema": "0.4.0-dev.0",
+    "@toa.io/yaml": "0.4.0-dev.0",
     "clone-deep": "4.0.1"
   }
 }
