--- a/libraries/generic/package.json
+++ b/libraries/generic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/generic",
-  "version": "0.3.0",
+  "version": "0.4.0-dev.0",
   "description": "Toa Generic Tools",
   "homepage": "https://toa.io",
   "author": {
