--- a/libraries/kubernetes/package.json
+++ b/libraries/kubernetes/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/kubernetes",
-  "version": "0.3.0",
+  "version": "0.4.0-dev.0",
   "description": "Toa kubectl/kubectx wrapper",
   "homepage": "https://toa.io",
   "author": {
@@ -23,7 +23,7 @@
   },
   "main": "source/index.js",
   "dependencies": {
-    "@toa.io/command": "0.3.0",
-    "@toa.io/generic": "0.3.0"
+    "@toa.io/command": "0.4.0-dev.0",
+    "@toa.io/generic": "0.4.0-dev.0"
   }
 }
