--- a/libraries/mock/package.json
+++ b/libraries/mock/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/mock",
-  "version": "0.3.0",
+  "version": "0.4.0-dev.0",
   "description": "Toa Mocks",
   "homepage": "https://toa.io",
   "author": {
@@ -24,6 +24,6 @@
   "main": "source/index.js",
   "types": "types/index.d.ts",
   "dependencies": {
-    "@toa.io/generic": "0.3.0"
+    "@toa.io/generic": "0.4.0-dev.0"
   }
 }
