feat: add event sources

--- a/features/steps/.workspace/components/collection/external.consumer/manifest.toa.yaml
+++ b/features/steps/.workspace/components/collection/external.consumer/manifest.toa.yaml
@@ -16,6 +16,7 @@ operations:
     query: false
 
 receivers:
-  external.something.happened:
+  something_happened:
     binding: amqp
+    source: external
     transition: transit
