--- a/connectors/storages.queues/package.json
+++ b/connectors/storages.queues/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@toa.io/bindings.amqp",
+  "name": "@toa.io/storages.queues",
   "version": "0.4.0-dev.5",
-  "description": "Toa AMQP Binding",
+  "description": "Toa Queues Storage Connector",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
   "main": "source/index.js",
@@ -17,16 +17,5 @@
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
-  },
-  "devDependencies": {
-    "@toa.io/mock": "0.4.0-dev.5"
-  },
-  "dependencies": {
-    "@toa.io/console": "0.4.0-dev.5",
-    "@toa.io/core": "0.4.0-dev.5",
-    "@toa.io/generic": "0.4.0-dev.5",
-    "@toa.io/generics.amqp": "0.4.0-dev.5",
-    "@toa.io/pointer": "0.4.0-dev.5"
-  },
-  "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
+  }
 }
