feat: add storages.queues (#224)
* feat(generic): add `range`

* style(dns): fix code formatting

* feat(generic): add `shards`

* docs(generic): update wording

* docs: add receivers declaration

* docs(generic): add test references

* refactor(pointer): extract `label` function

* style(node): add blank lines

* feat(core): add `Locator.parse`

* feat: add event sources

* refactor(amqp): change broadcast consumption to exclusive

* docs(queues): add readme

* refactor(amqp): extract generic amqp connector

* feat: add `storages.queues`

* feat: add properties normalization to `storages.queues`

--- a/connectors/bindings.amqp/package.json
+++ b/connectors/bindings.amqp/package.json
@@ -25,8 +25,8 @@
     "@toa.io/console": "0.4.0-dev.5",
     "@toa.io/core": "0.4.0-dev.5",
     "@toa.io/generic": "0.4.0-dev.5",
-    "@toa.io/pointer": "0.4.0-dev.5",
-    "comq": "0.5.0"
+    "@toa.io/generics.amqp": "0.4.0-dev.5",
+    "@toa.io/pointer": "0.4.0-dev.5"
   },
   "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
 }
