chore(schemas): update ajv version

--- a/libraries/schemas/test/schemas/two.cos.yaml
+++ b/libraries/schemas/test/schemas/two.cos.yaml
@@ -1,5 +1,3 @@
 bar: string
-foo:
-  $ref: one#/properties/foo
-baz:
-  $ref: nested/and.three#/properties/qux
+foo: ref:one#/properties/foo
+baz: ref:nested/and.three#/properties/qux
