test(features): add local environment scenario for `origins`

--- a/features/steps/.workspace/components/collection/origins.http/manifest.toa.yaml
+++ b/features/steps/.workspace/components/collection/origins.http/manifest.toa.yaml
@@ -4,6 +4,8 @@ namespace: origins
 operations:
   test:
     output: object
+  bad:
+    output: object
 
 origins:
   echo: http://localhost:8888/some/
